# django_bestpractice

./: .gitignore  manage.py  pyproject.toml
accounts/: admin.py  managers.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_gender.py
checkservice/: asgi.py  settings.py  urls.py  wsgi.py
