[project]
name = "djangoserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "django>=5.2.7",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
    "django-stubs-ext>=5.2.7",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
